jboss-openshift-objects.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "jboss-app-svc"
  namespace: "virtualization-test"
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    kubevirt.io/domain: "fedora-chocolate-smelt-74"
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: "jboss-app-route"
  namespace: "virtualization-test"
spec:
  to:
    kind: Service
    name: "jboss-app-svc"
  port:
    targetPort: http
